@@ -6,11 +6,9 @@ import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import me.kjeok.edsproject.domain.ColumnList;
 import me.kjeok.edsproject.domain.Der;
+import me.kjeok.edsproject.domain.HomeLoad;
 import me.kjeok.edsproject.domain.Resource;
-import me.kjeok.edsproject.dto.CategoryResponse;
-import me.kjeok.edsproject.dto.DerResponse;
-import me.kjeok.edsproject.dto.ListResponse;
-import me.kjeok.edsproject.dto.MenuResponse;
+import me.kjeok.edsproject.dto.*;
 import me.kjeok.edsproject.repository.ResourceRepository;
 import me.kjeok.edsproject.service.EdsService;
 import org.apache.coyote.Response;
@@ -33,31 +31,55 @@ import java.util.stream.IntStream;
 public class EdsApiController {
     private final EdsService edsService;
 
-    //DER API
-    @GetMapping("/{home_id}/{category}/findByList")
+    @GetMapping("/{home_id}/{category}/derApi")
     public ResponseEntity<Map<String, Object>> list(@PathVariable("home_id") int homeId, @PathVariable("category") String category) {
         List<String> derTypes = Arrays.asList("Solar", "Wind", "EV Battery", "ESS");
+        List<String> loadTypes = Arrays.asList("HVAC", "Lighting", "EV Charger", "Refrigerator", "Washing Machine", "Dishwasher");
+
+        List<String> types;
+        List<String> fieldNames;
+
+        // 카테고리별로 유형과 필드명을 설정
+        switch (category) {
+            case "der":
+                types = derTypes;
+                fieldNames = getDerColumn().getBody();
+                break;
+            case "homeload":
+                types = loadTypes;
+                fieldNames = getLoadColumn().getBody();
+                break;
+            default:
+                throw new IllegalArgumentException("Invalid category");
+        }
+
         List<MenuResponse> menuResponses = new ArrayList<>();
 
-        for (String derType : derTypes) {
-            List<Resource> resources = edsService.findByMenu(derType);
+        for (String type : types) {
+            List<Resource> resources = edsService.findByMenu(type);
             String menuDescription = resources.isEmpty() ? "" : resources.get(0).getResourceDescription(); // 첫 번째 리소스의 설명 사용
 
-            List<String> fieldNames = getDerColumn().getBody();
-            List<String> derListDescriptions = derListDescriptions().getBody();
+            List<String> listDescription = listDescriptions(category).getBody();
 
             // 각 필드에 대한 컬럼 값을 조회
             List<Object> columnValues = fieldNames.stream()
-                    .map(fieldName -> edsService.getColumnValue(homeId, fieldName, derType))
+                    .map(fieldName -> {
+                        if (category.equals("der")) {
+                            return edsService.getDerColumnValue(homeId, fieldName, type);
+                        } else {
+                            return edsService.getLoadColumnValue(homeId, fieldName, type);
+                        }
+                    })
                     .collect(Collectors.toList());
+
 
             // ListResponse 객체 생성
             List<ListResponse> listResponses = IntStream.range(0, fieldNames.size())
-                    .mapToObj(i -> new ListResponse(i + 1, fieldNames.get(i), derListDescriptions.get(i), columnValues.get(i)))
+                    .mapToObj(i -> new ListResponse(i + 1, fieldNames.get(i), listDescription.get(i), columnValues.get(i)))
                     .collect(Collectors.toList());
 
             // MenuResponse 생성
-            MenuResponse menuResponse = new MenuResponse(menuResponses.size() + 1, derType, menuDescription, listResponses);
+            MenuResponse menuResponse = new MenuResponse(menuResponses.size() + 1, type, menuDescription, listResponses);
             menuResponses.add(menuResponse);
         }
 
@@ -65,7 +87,7 @@ public class EdsApiController {
         List<CategoryResponse> categoryResponses = edsService.findByCategory(category)
                 .stream()
                 .map(CategoryResponse::new)  // CategoryResponse로 변환
-                .toList();
+                .collect(Collectors.toList());
 
         // 카테고리 정보가 비어있을 경우 처리
         CategoryResponse categoryResponse = categoryResponses.isEmpty() ? null : categoryResponses.get(0);
@@ -79,10 +101,17 @@ public class EdsApiController {
     }
 
 
-
-
     /***********************************************************************************/
 
+    @GetMapping("/{home_id}/{loadType}/findByLoadType")
+    public ResponseEntity<List<LoadResponse>> load(@PathVariable("home_id") int homeId, @PathVariable("loadType") String loadType) {
+        List<LoadResponse> loadResponses = edsService.findByHomeIdAndLoadType(homeId, loadType)
+                .stream()
+                .map(LoadResponse::new)
+                .toList();
+
+        return ResponseEntity.ok(loadResponses);
+    }
 
 
     @GetMapping("/{category}/findByCategory")
@@ -121,7 +150,7 @@ public class EdsApiController {
 
 
 
-    @GetMapping("/{home_id}/{category}/findByDerMenu")
+    //@GetMapping("/{home_id}/{category}/findByDerMenu")
     public ResponseEntity<List<DerResponse>> der(
             @PathVariable("home_id") int homeId,
             @PathVariable("category") String category) {
@@ -134,25 +163,14 @@ public class EdsApiController {
         return ResponseEntity.ok(derResponses);
     }
 
-    // der list description List
-    @GetMapping("/derListDescriptions")
-    public ResponseEntity<List<String>> derListDescriptions() {
-        List<String> fieldNames = getDerColumn().getBody();
 
-        List<String> listResponses = edsService.findByList(fieldNames)
-                .stream()
-                .map(ColumnList::getListDescription) // ListResponse 생성
-                .collect(Collectors.toList()); // toList()를 스트림 끝에 호출
-
-        return ResponseEntity.ok(listResponses);
-    }
 
     // der필드 List
     @GetMapping("/derFields")
     public ResponseEntity<List<String>> getDerColumn() {
-        List<String> fieldNames = Arrays.stream(Der.class.getDeclaredFields())  // Der.class 사용
+        List<String> derFieldNames = Arrays.stream(Der.class.getDeclaredFields())  // Der.class 사용
                 .filter(field -> !field.getName().equals("homeId")) // home_id 필드를 제외
-                //.filter(field -> !field.getName().equals("derType"))
+                .filter(field -> !field.getName().equals("derType"))
 
                 .map(field -> {
                     Column columnAnnotation = field.getAnnotation(Column.class); // @Column 어노테이션을 가져옴
@@ -160,8 +178,46 @@ public class EdsApiController {
                 })
                 .collect(Collectors.toList());
 
-        return ResponseEntity.ok(fieldNames);
+        return ResponseEntity.ok(derFieldNames);
+    }
+
+    // homeload필드 list
+    @GetMapping("/homeloadFieds")
+    public ResponseEntity<List<String>> getLoadColumn() {
+        List<String> loadFieldNames = Arrays.stream(HomeLoad.class.getDeclaredFields())
+                .filter(field -> !field.getName().equals("loadType"))
+                .filter(field -> !field.getName().equals("homeId"))
+
+                .map(field -> {
+                    Column columnAnnotation = field.getAnnotation(Column.class); // @Column 어노테이션을 가져옴
+                    return columnAnnotation != null ? columnAnnotation.name() : field.getName(); // 컬럼 이름 반환
+                })
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(loadFieldNames);
     }
 
 
+    //list description List
+    @GetMapping("/{category}/listDescriptions")
+    public ResponseEntity<List<String>> listDescriptions(@PathVariable("category") String category) {
+        List<String> loadFieldNames = getLoadColumn().getBody();
+        List<String> derFieldNames = getDerColumn().getBody();
+
+        List<String> fieldNames = new ArrayList<>();
+
+        if(category.equals("der"))
+            fieldNames = derFieldNames;
+        else if(category.equals("homeload"))
+            fieldNames = loadFieldNames;
+        else
+            throw new IllegalArgumentException("Invalid category");
+
+        List<String> listResponses = edsService.findByList(fieldNames, category+"_table")
+                .stream()
+                .map(ColumnList::getListDescription) // ListResponse 생성
+                .collect(Collectors.toList()); // toList()를 스트림 끝에 호출
+
+        return ResponseEntity.ok(listResponses);
+    }
 }
